# readykit

./: .gitignore  AGENTS.md  README.md  checks.py  fly.toml  pyproject.toml  railway.json  render.yaml
.github/workflows/: checks.yml  deploy-fly.yml  deploy-railway.yml  deploy-render.yml  docs.yml
docs/: billing.md  deployment.md  development.md  getting-started.md  index.md  introduction.md  package-lock.json
docs/.vitepress/: config.mjs
docs/deployment/: fly.md  railway.md  render.md
enferno/: app.py  commands.py  extensions.py  settings.py
enferno/api/: webhooks.py
enferno/portal/: views.py
enferno/public/: views.py
enferno/services/: billing.py  workspace.py
enferno/static/css/: app.css  layout.css
enferno/static/js/: config.js
enferno/templates/: auth_layout.html  billing_success.html  dashboard.html  index.html  layout.html  profile.html  security_settings.html  workspace.html  workspace_keys.html  workspace_settings.html  workspace_team.html
enferno/templates/cms/: activities.html  users.html
enferno/templates/core/: dashboard.jinja2
enferno/templates/security/: change_password.html  forgot_password.html  login_user.html  mf_recovery.html  mf_recovery_codes.html  register_user.html  reset_password.html  send_confirmation.html  two_factor_select.html  two_factor_setup.html  two_factor_verify_code.html  wan_register.html  wan_signin.html  wan_verify.html
enferno/user/: models.py  views.py
migrations/versions/: 10d390d65cd8_baseline.py
